--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
     <img  class="logo" src="images/logo.svg" alt="logo">
   </header>
   <div class="flex">
-    <div class="flex-item">
+    <div class="flex-item item-1">
       <img class="illustration" src="images/illustration-mockups.svg" alt="illustration">
     </div>
-    <div class="flex-item">
+    <div class="flex-item item-2">
       <h1 class="ff-heading fs-large">Build The Community Your Fans Will Love</h1>
       <p class="ff-body fs-regular fw-regular">
         Huddle re-imagines the way we build communities. You have a voice, but so does your audience. 
